ThirdParty/mojoshader/unit_tests/preprocessor/errors/undef-line-twice.correct
preprocessor/errors/undef-line-twice:3: ERROR: undefining "__LINE__"
